force-app/main/default/objects/CampaignMember/fields/Attendee_Type__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Type__c</fullName>
    <label>Attendee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In patient</fullName>
            </value>
            <value>
                <fullName>Out patient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>