force-app/main/default/objects/CampaignMember/fields/Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>Contact_Method__c</fullName>
    <description>This is the type of contact had regarding the event</description>
    <inlineHelpText>This is the type of contact had regarding the event</inlineHelpText>
    <label>Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Face to Face</fullName>
            </value>
            <value>
                <fullName>DIY Form-Contact</fullName>
            </value>
            <value>
                <fullName>DIY For-Volunteer</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>Phone/SMS</fullName>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Visit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>