force-app/main/default/objects/CampaignMember/fields/Funraisin__Duration_target__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Duration_target__c</fullName>
    <label>Duration target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>