force-app/main/default/objects/CampaignMember/fields/Funraisin__Fundraising_Target__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Fundraising_Target__c</fullName>
    <label>Fundraising Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>