force-app/main/default/objects/CampaignMember/fields/Funraisin__History_Type__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__History_Type__c</fullName>
    <label>History Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>