force-app/main/default/objects/CampaignMember/fields/Funraisin__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Is_Active__c</fullName>
    <label>Is Active</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <default>true</default>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>