force-app/main/default/objects/CampaignMember/fields/Funraisin__Number_Seats__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Number_Seats__c</fullName>
    <label>Number Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>