force-app/main/default/objects/CampaignMember/fields/Funraisin__Number_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Number_Tickets__c</fullName>
    <label>Number Tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>