force-app/main/default/objects/CampaignMember/fields/Funraisin__Page_Url__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Page_Url__c</fullName>
    <description>Fundraising page url</description>
    <label>Page Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>