force-app/main/default/objects/CampaignMember/fields/Funraisin__Seat_Number__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Seat_Number__c</fullName>
    <label>Seat Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>