force-app/main/default/objects/CampaignMember/fields/Funraisin__Step_target__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Step_target__c</fullName>
    <label>Step target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>