force-app/main/default/objects/CampaignMember/fields/Funraisin__Team__c.field-meta.xml
<CustomField>
    <fullName>Funraisin__Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team</label>
    <referenceTo>Funraisin__Team__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>