force-app/main/default/objects/CampaignMember/fields/Hospital_Location__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Location__c</fullName>
    <description>This is the list of hospitals</description>
    <inlineHelpText>This is the list of hospitals</inlineHelpText>
    <label>Hospital Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Hospital_Location</valueSetName>
    </valueSet>
</CustomField>