force-app/main/default/objects/CampaignMember/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>This is the note from the contact</description>
    <inlineHelpText>This is the note from the contact</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>