force-app/main/default/objects/CampaignMember/fields/Number_of_Children_Attending__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Children_Attending__c</fullName>
    <description>This is the number of children attending the event</description>
    <inlineHelpText>This is the number of children attending the event</inlineHelpText>
    <label>Number of Children Attending</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>