force-app/main/default/objects/CampaignMember/fields/Soft_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Soft_Credit_Amount__c</fullName>
    <description>Pre-2021 only - data from eTapestry for reporting purposes</description>
    <inlineHelpText>Pre-2021 only - data from eTapestry for reporting purposes</inlineHelpText>
    <label>Soft Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>