force-app/main/default/objects/CampaignMember/fields/Support_Coordinator_Name__c.field-meta.xml
<CustomField>
    <fullName>Support_Coordinator_Name__c</fullName>
    <description>This is the name of the support coordinator who added the journal contact</description>
    <inlineHelpText>This is the name of the support coordinator who added the journal contact</inlineHelpText>
    <label>Support Coordinator Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Support_Coordinator_Name</valueSetName>
    </valueSet>
</CustomField>